--- a/lotfresh-front/package.json
+++ b/lotfresh-front/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit -p tsconfig.app.json --composite false"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "axios": "^1.5.1",
     "element-plus": "^2.4.1",
     "normalize.css": "^8.0.1",
@@ -36,5 +37,5 @@
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vue-tsc": "^1.8.11"
-  
-}}
+  }
+}
