--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -51,8 +51,14 @@ dependencies {
     implementation group: 'org.springframework.security', name: 'spring-security-oauth2-core', version: '5.5.2'
     implementation group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.7.5'
 
+    // jwt
+    implementation 'com.auth0:java-jwt:4.2.1'
+    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
     annotationProcessor 'org.projectlombok:lombok'
