--- a/nginx-conf/default.conf
+++ b/nginx-conf/default.conf
@@ -24,12 +24,12 @@ server {
         proxy_set_header X-Real-Ip $remote_addr;
     }
 
-    # auth-service에 대한 요청을 처리.
-    location /auth-service/ {
-        proxy_pass http://gateway-service:8090;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-Ip $remote_addr;
-    }
+    # auth-service에 대한 요청을 처리. 삭제.
+    # location /auth-service/ {
+    #     proxy_pass http://gateway-service:8090;
+    #     proxy_set_header Host $host;
+    #     proxy_set_header X-Real-Ip $remote_addr;
+    # }
 
     # user-service에 대한 요청을 처리.
     location /user-service/ {
