--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -21,6 +21,28 @@ spring:
     port: ${REDIS_PORT}
     password: ${DB_PASSWORD}
 
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            client-id: ${CLIENT_ID}
+            redirect-uri: https://lot-fresh.shop/user-service/login/oauth2/code/kakao
+            client-authentication-method: POST
+            client-secret: ${CLIENT_SECRET}
+            authorization-grant-type: authorization_code
+            scope:
+              - profile_nickname
+              - account_email
+            client_name: kakao
+        provider:
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-name-attribute: id
+
+
 eureka:
   client:
     serviceUrl:
@@ -31,3 +53,10 @@ logging:
     org.hibernate.SQL: warn
     org:
       springframework:
+jwt:
+  token:
+    secret-key: ${JWT_SECRET}
+  access-token:
+    expire-length: ${JWT_ACCESS_EXPIRE} # 2시간
+
+LOGIN_SUCCESS_URL: ${LOGIN_SUCCESS_URL}
