--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -48,7 +48,7 @@ spring:
             - Path=/cart-service/**
           filters:
             - RewritePath=/cart-service/(?<segment>.*), /$\{segment}
-            - AuthenticationFilter
+            # - AuthenticationFilter
 
         - id: product-service
           uri: lb://PRODUCT-SERVICE
@@ -85,7 +85,7 @@ spring:
 eureka:
   client:
     serviceUrl:
-#      defaultZone: http://eureka-service:8761/eureka/
+      #      defaultZone: http://eureka-service:8761/eureka/
       defaultZone: http://localhost:8761/eureka/
 
 jwt:
